# no-youtube-news-dash

./: .gitignore  README.md  fix_topics.py  personal news aggregator 01_TECHNICAL_DOCUMENT.md  personal news aggregator 02_FUNCTIONAL_DOCUMENT.md  personal news aggregator 03_EXECUTION_DOCUMENT.md  pyproject.toml  query_columns.py  run_scoring.py
artifacts/: implementation_plan.md  task.md  walkthrough.md
config/: sources.yaml
launchd/: com.user.newsdash.plist
src/newsdash/: __main__.py  config.py  pipeline_runner.py
src/newsdash/db/: models.py
src/newsdash/digest/: auth_google.py  brief_generator.py  drive_uploader.py  mailer.py  mock_smtp_server.py  send_now.py  test_digest.py
src/newsdash/fetchers/: github.py  rss.py
src/newsdash/pipeline/: classify.py  dedupe.py  derived.py  impact.py  summarise.py
src/newsdash/server/: app.py
src/newsdash/server/templates/: dashboard.html
