[project]
name = "newsdash"
version = "1.0.0"
description = "Personal geopolitics and tech intelligence dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "rapidfuzz>=3.0.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "lxml>=5.0.0",
    "greenlet>=3.0.0",
    "ollama>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsdash"]
